# build-tools-template

./: CMakeLists.txt  ChangeLog  README.md
.github/workflows/: freebsd.yml  linux-debian.yml  linux-fedora.yml  linux-ubuntu.yml  packaging.yml
ci/: build-tool  ci-setup
debian/: changelog  control  copyright  libexample-dev.install  libexample0.install  libexamplelibrary-dev.install  libexamplelibrary0.install  libexamplelibrary0.symbols  rules  td-build-tools-example-programs.examples  td-build-tools-example-programs.install  td-build-tools-example-programs.manpages  td-build-tools-example-scripts.examples  td-build-tools-example-scripts.install  td-build-tools-example-scripts.manpages  td-build-tools-example.examples  td-build-tools-example.install  td-build-tools-example.manpages  td-build-tools-examples.examples
debian/tests/: 10-test-example-programs  20-test-example-scripts  control  simple-test
debian/upstream/: metadata
freebsd/td-build-tools-template/: Makefile  distinfo  pkg-descr  pkg-plist
po/: CMakeLists.txt  example-program1.sources  example-program2.sources  example-script1.sources  example-script2.sources
po/de/: example-program1.po  example-program2.po  example-script1.po  example-script2.po
po/nb/: example-program1.po  example-program2.po  example-script1.po  example-script2.po
rpm/: td-build-tools-template.spec
src/: CMakeLists.txt  example-library.cc  example-library.h  example-program1.1  example-program1.bash-completion  example-program1.c  example-program2.1  example-program2.bash-completion  example-program2.cc  example-script1  example-script1.1  example-script2  example-script2.1  example.1  example.cc  library.cc  library.h  package-version.h.in
